--- a/quiz.html
+++ b/quiz.html
@@ -16,7 +16,8 @@
           <li class="nav-list-item"><a href="area.html">Area</a></li>
           <li class="nav-list-item"><a href="quiz.html">Quiz</a></li>
         </ul>
-    </nav>    
+    </nav>   
+    <main> 
     <h1>Quiz</h1>
     <h3>For each correct answer you will get 1 point.</h3>
     <form action="" class="form">
@@ -127,6 +128,7 @@
       </div>
     </form>
     <button class="check">Submit</button>
+  </main>
     <div class="output" ></div>
     <script src="script_quiz.js" type="text/javascript"></script>
   </body>
